syntax = "proto3";

package trainerpb;

option csharp_namespace = "TrainerApi";

import "google/protobuf/timestamp.proto";

// Common message types
message Medal {
    string region = 1;
    MedalType type = 2;
}

enum MedalType {
    UNKNOWN = 0;
    GOLD = 1;
    SILVER = 2;
    BRONZE = 3;
}

message TrainerResponse {
    string id = 1;
    string name = 2;
    int32 age = 3;
    google.protobuf.Timestamp birth_date = 4;
    google.protobuf.Timestamp created_at = 5;
    repeated Medal medals = 6;
}

// Request/Response messages
message TrainerByIdRequest {
    string id = 1;
}

message TrainersByNameRequest {
    string name = 1;
}

message CreateTrainerRequest {
    string name = 1;
    int32 age = 2;
    google.protobuf.Timestamp birth_date = 3;
    repeated Medal medals = 4;
}

message CreateTrainerResponse {
    int32 success_count = 1;
    repeated TrainerResponse trainers = 2;
}

// Service definition
service TrainerService {
    rpc GetTrainerById (TrainerByIdRequest) returns (TrainerResponse); //Unary call
    rpc GetAllTrainersByName (TrainersByNameRequest) returns (stream TrainerResponse); //Server streaming call
    rpc CreateTrainer (stream CreateTrainerRequest) returns (CreateTrainerResponse); //Client streaming call
}